...
        
        self.loadInitialData()
    }
    
    func loadInitialData() {
        let item1 = ToDoItem()
        item1.itemName = "Buy milk"
        self.toDoItems.append(item1)
        
        let item2 = ToDoItem()
        item2.itemName = "Buy eggs"
        self.toDoItems.append(item2)
        
        let item3 = ToDoItem()
        item3.itemName = "Read a book"
        self.toDoItems.append(item3)
    }
...
