...
                        <connections>
                            <outlet property="dataSource" destination="DVg-CX-UuS" id="pwE-Hh-jTt"/>
                            <outlet property="delegate" destination="DVg-CX-UuS" id="l4l-rP-Ehx"/>
                        </connections>
                    </tableView>
                    <toolbarItems/>
                    <navigationItem key="navigationItem" title="My To-Do Item" id="gHP-sf-Hdd">
                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="vJc-Ld-eUi">
                            <connections>
                                <segue destination="uGT-ba-dKQ" kind="presentation" id="O8T-du-VDf"/>
                            </connections>
                        </barButtonItem>
                    </navigationItem>
...
                        <constraints>
                            <constraint firstItem="Gdd-XR-9j8" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="WWZ-32-Ylw"/>
                            <constraint firstItem="Gdd-XR-9j8" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="pIU-XY-8UX"/>
                            <constraint firstItem="Gdd-XR-9j8" firstAttribute="trailing" secondItem="8bC-Xf-vdC" secondAttribute="trailingMargin" id="yvs-FR-RU6"/>
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Add To-Do Item" id="cxW-bS-fIt">
                        <barButtonItem key="leftBarButtonItem" systemItem="cancel" id="nVb-oR-89n">
                            <connections>
                                <segue destination="taU-4x-n2w" kind="unwind" unwindAction="unwindForSegue:" id="RpN-gZ-cdi"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" systemItem="done" id="JMN-4F-3g5">
...
